--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "react-bootstrap": "^2.2.3",
+    "react-data-table-component": "^7.5.0",
     "react-icons": "^4.3.1",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
